zokrates_cli/examples/compile_errors/constant_array_size_type_mismatch_field.zok
const field SIZE = 2;

def main(field[SIZE] n) {
    return;
}
